# game-api

./: .env  Cargo.toml  README.md  Rocket.toml  sqlfile.sql  up.sql
docs/: bundle.js  bundle.js.map  insomnia.json
src/: global_handlers.rs  lib.rs  main.rs  pg_connection.rs  tests.rs
src/game/: handler.rs  handlers.rs  mod.rs  models.rs  repository.rs
