[package]
name = "game-api"
version = "0.1.0"
authors = ["Martin L. Jensen <martinloesethjensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
postgres = "0.17.0"
dotenv = "0.15.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = true
features = ["postgres_pool"]
