[package]
name = "game-api"
version = "0.1.0"
authors = ["Martin L. Jensen <martinloesethjensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
postgres = "0.19.0"
dotenv = "0.15.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
rand = "0.8.3"